--- a/color.css
+++ b/color.css
@@ -1,34 +1,35 @@
-:root, .light, .light-theme {
-    --gray-1: rgba(252, 252, 253, 1);
-    --gray-2: rgba(249, 249, 251, 1);
-    --gray-3: rgba(239, 240, 243, 1);
-    --gray-4: rgba(231, 232, 236, 1);
-    --gray-5: rgba(224, 225, 230, 1);
-    --gray-6: rgba(216, 217, 224, 1);
-    --gray-7: rgba(205, 206, 215, 1);
-    --gray-8: rgba(185, 187, 198, 1);
-    --gray-9: rgba(139, 141, 152, 1);
-    --gray-10: rgba(128, 130, 141, 1);
-    --gray-11: rgba(98, 99, 108, 1);
-    --gray-12: rgba(30, 31, 36, 1);
-  
-    --gray-a1: rgba(0, 0, 85, 0.011764705882352941);
-    --gray-a2: rgba(0, 0, 85, 0.023529411764705882);
-    --gray-a3: rgba(0, 16, 64, 0.06274509803921569);
-    --gray-a4: rgba(0, 11, 54, 0.09411764705882353);
-    --gray-a5: rgba(0, 9, 50, 0.12156862745098039);
-    --gray-a6: rgba(0, 7, 53, 0.15294117647058825);
-    --gray-a7: rgba(0, 6, 51, 0.19607843137254902);
-    --gray-a8: rgba(0, 8, 48, 0.27450980392156865);
-    --gray-a9: rgba(0, 5, 29, 0.4549019607843137);
-    --gray-a10: rgba(0, 5, 27, 0.4980392156862745);
-    --gray-a11: rgba(0, 2, 17, 0.615686274509804);
-    --gray-a12: rgba(0, 1, 7, 0.8823529411764706);
-  
-    --gray-contrast: rgba(255, 255, 255, 1);
-    --gray-surface: rgba(255, 255, 255, 0.8);
-    --gray-indicator: rgba(139, 141, 152, 1);
-    --gray-track: rgba(139, 141, 152, 1);
-  }
-  
-  
+:root,
+.light,
+.light-theme {
+  --gray-1: rgba(252, 252, 253, 1);
+  --gray-2: rgba(249, 249, 251, 1);
+  --gray-3: rgba(239, 240, 243, 1);
+  --gray-4: rgba(231, 232, 236, 1);
+  --gray-5: rgba(224, 225, 230, 1);
+  --gray-6: rgba(216, 217, 224, 1);
+  --gray-7: rgba(205, 206, 215, 1);
+  --gray-8: rgba(185, 187, 198, 1);
+  --gray-9: rgba(139, 141, 152, 1);
+  --gray-10: rgba(128, 130, 141, 1);
+  --gray-11: rgba(98, 99, 108, 1);
+  --gray-12: rgba(30, 31, 36, 1);
+
+  --gray-a1: rgba(0, 0, 85, 0.011764705882352941);
+  --gray-a2: rgba(0, 0, 85, 0.023529411764705882);
+  --gray-a3: rgba(0, 16, 64, 0.06274509803921569);
+  --gray-a4: rgba(0, 11, 54, 0.09411764705882353);
+  --gray-a5: rgba(0, 9, 50, 0.12156862745098039);
+  --gray-a6: rgba(0, 7, 53, 0.15294117647058825);
+  --gray-a7: rgba(0, 6, 51, 0.19607843137254902);
+  --gray-a8: rgba(0, 8, 48, 0.27450980392156865);
+  --gray-a9: rgba(0, 5, 29, 0.4549019607843137);
+  --gray-a10: rgba(0, 5, 27, 0.4980392156862745);
+  --gray-a11: rgba(0, 2, 17, 0.615686274509804);
+  --gray-a12: rgba(0, 1, 7, 0.8823529411764706);
+
+  --gray-contrast: rgba(255, 255, 255, 1);
+  --gray-surface: rgba(255, 255, 255, 0.8);
+  --gray-indicator: rgba(139, 141, 152, 1);
+  --gray-track: rgba(139, 141, 152, 1);
+}
+
